--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="manifest" href="/manifest.json" />
     
     <link rel="shortcut icon" type="image/png" href="/favicon.png" />
+    <link href="./src/output.css" rel="stylesheet">
     
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
